--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
      <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <div class="discover">
         <h1> Discover hidden places  in the world around you</h1>
+        <h3> Download Excursion (coming soon!)</h3>
+        <embed src="./resources/videos/excursion.mp4" height="800" width="500">
+    </div>
+
+    <div class="personal">
+      <h1> Your Personal travel guide</h1>
+      <h2> Excursion remembers places you like, and recommends new points of interest around you.</h2>
+      <img src="./resources/images/camp.jpg" alt="camp">
+    </div>
+
+    <div class="phone">
+      <br>
+      <img src="./resources/images/phone.png">
+      <h1> Coming soon for iPhone and Android</h1>
+      <h3>Download Excursion (coming soon!)</h3>
+        <h2>© Excursion<h2>
+    </div>
+
   </body>
 </html>
