change of video code

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <div class="discover">
         <h1> Discover hidden places  in the world around you</h1>
         <h3> Download Excursion (coming soon!)</h3>
-        <embed src="./resources/videos/excursion.mp4" height="800" width="500">
-    </div>
+        <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+        <video autoplay muted loop>
+          <source src="resources/videos/excursion.mp4" type="video/mp4">
+        </video>
 
     <div class="personal">
       <h1> Your Personal travel guide</h1>
