--- a/index.html
+++ b/index.html
@@ -6,26 +6,30 @@
      <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+
+    <!-- landing section-->
     <div class="discover">
         <h1> Discover hidden places  in the world around you</h1>
-        <h3> Download Excursion (coming soon!)</h3>
         <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
         <video autoplay muted loop>
           <source src="resources/videos/excursion.mp4" type="video/mp4">
         </video>
 
-    <div class="personal">
-      <h1> Your Personal travel guide</h1>
-      <h2> Excursion remembers places you like, and recommends new points of interest around you.</h2>
-      <img src="./resources/images/camp.jpg" alt="camp">
-    </div>
+    <!--Information section -->
 
-    <div class="phone">
-      <br>
-      <img src="./resources/images/phone.png">
-      <h1> Coming soon for iPhone and Android</h1>
-      <h3>Download Excursion (coming soon!)</h3>
-        <h2>© Excursion<h2>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p><img src="resources/images/camp.jpg"></p>
+
+    <!--Coming soon section-->
+    <p><img class="app" src="resources/images/phone.png"></p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+
+    <!--Footer-->
+    <div class="footer">
+
+        <p> class="footer">&copy; Excursion</p>
     </div>
 
   </body>
