--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!--Footer-->
     <div class="footer">
 
-        <p> class="footer">&copy; Excursion</p>
+        <p class ="footer"> &copy; Excursion</p>
     </div>
 
   </body>
